--- a/Linux/cmd/软件包管理.md
+++ b/Linux/cmd/软件包管理.md
@@ -86,3 +86,46 @@ www.rpmfind.net 查找依赖性
 包名安装好的包用包名就行，系统会到/var/lib/rpm中找，/var/lib/rpm是一个数据库。
 
 查询和卸载一般用包命
+
+### setup ip地址配置
+
+配置完ip 记得查看网卡是否开启了
+vi /etc/sysconfig/network-scripts/ifcfg-eth0 把ONBOOT=no 改为 yes
+
+### 网络yum源
+保存在/etc/yum.repos.d/CentOS-Base.repo
+文件格式如下
+```
+     [base]         容器名称，一定放在[]中
+     name           容器说明，可以自己编写
+     mirrorlist     镜像站点，这个可以注释掉
+     baseurl        yum源服务器地址，默认是CentOS官方服务器
+     enabled        此容器是否生效，不写和写成enabel=1是生效0是不生效
+     gpgcheck       值为1是RPM的数字证书生效，0是不生效
+     gpgkey         数字证书的公钥保存位置，不用修改
+
+```
+
+#### yum 命令
+
+1. yum list             
+   > 查询所有可用软件包列表
+2. yum search +关键字   
+   > 搜索服务器上所有和关键字相关的包
+3. yum -y install 包名
+   > inatall 安装  -y 自动回答yes 
+4. yum -y updaet 包名
+   > 升级指定包 *注意：不加包名是升级所有软件包，包括linux内核，禁止远程使用*
+5. yum -y remove 包名
+   > 卸载包 *注意：卸载也会删除依赖，最好不用*
+6. yun grouplist
+   > 列出所有可用的软件组列表
+7. yum groupinstall 软件组名
+   > 安装指定软件组，组名可以由grouplist查出
+8. yum groupremove 软件组名
+   > 卸载指定软件组
+
+### 光盘yum源
+
+
+
