--- a/Linux/cmd/软件包管理.md
+++ b/Linux/cmd/软件包管理.md
@@ -126,6 +126,13 @@ vi /etc/sysconfig/network-scripts/ifcfg-eth0 把ONBOOT=no 改为 yes
    > 卸载指定软件组
 
 ### 光盘yum源
+1. 首先挂载光盘
+    > mount /dev/cdrom /mnt/cdrom
+2. 让网络yum源失效
+    > 把不是CentOS-Media.repo 改名
+3. 让光盘yum源生效
+    > 修改文件CentOS-Media.repo 配置 enable=1 baseul=file:///mnt/cdrom
+    注释掉多余地址
 
 
 
