--- a/Linux/cmd/软件包管理.md
+++ b/Linux/cmd/软件包管理.md
@@ -87,6 +87,13 @@ www.rpmfind.net 查找依赖性
 
 查询和卸载一般用包命
 
+    大多数rpm包默认安装位置
+    /etc/       配置文件安装目录
+    /usr/bin/   放安装好的可执行的命令
+    /usr/lib/   放程序所使用的函数库
+    /usr/share/doc/     基本的软件使用手册保存位置
+    /usr/share/man/     帮助文件保存位置
+
 ### setup ip地址配置
 
 配置完ip 记得查看网卡是否开启了
@@ -134,5 +141,38 @@ vi /etc/sysconfig/network-scripts/ifcfg-eth0 把ONBOOT=no 改为 yes
     > 修改文件CentOS-Media.repo 配置 enable=1 baseul=file:///mnt/cdrom
     注释掉多余地址
 
+### 源码包安装
+
+　安装位置一般是 /usr/local/软件名  与rpm不同的是，rpm安装的软件可以使用系统服务(service)命令
+来管理，例如rpm的apache的启动方法
+> /etc/rc.d/init.d/httpd start
+>
+> service httpd start (service 是radhat专有)
+
+　一般安装包源保存位置，在/usr/local/src，软件安装位置在/usr/local
+
+1. configure 软件配置与检查
+    ```
+    定义需要的功能，INSTALL是安装说明，README是使用说明
+    检测系统系统环境是否支持安装
+    把定义好的功能和检测信息写入Makefile文件
+    configure 别的选项可以不用定义，但--prefix=/usr/local/xxx 路径一定要定义
+    ```
+
+2. make
+    ```
+       如果前2步有报错要重装，执行 make clean
+    ```
+3. make install
+
+### 脚本安装包
+ 类似windows的下一步，很多硬件驱动安装多为这种安装方式
+ 执行 setup.sh
 
 
+
+
+   
+
+
+ 
