--- a/Linux/cmd/用户管理命令.md
+++ b/Linux/cmd/用户管理命令.md
@@ -4,7 +4,7 @@ uid 0 是 root
 1~499 系统用户（伪用户）
 500~65535 普通用户
 
-每个用户都有初始组，就是一建立用户的那个组，不建议修改用户的初始组
+gid(初始组id)每个用户都有初始组，就是一建立用户的那个组，不建议修改用户的初始组
 
 最后一个字段是shell 命令解释器，任何系统都有命令解释器，在linux
 里就叫shell，windows里是个图形界面而已，linux里可以有多个shell，
@@ -21,3 +21,34 @@ uid 0 是 root
 ### 组信息文件/etc/group
 
 ### 组密码文件/etc/gshadow
+
+### 用户家目录
+
+普通用户 /home 权限700  
+root /root 权限550  
+### 用户邮箱
+每个用户的邮箱在/var/spool/mail/用户名
+### 用户模板目录
+/etc/skel/ 每个用户建立后在家目录会有很多隐藏目录，这就是那些隐藏目录的模板。  
+在/etc/skel/中的文件都会在每个用户的家目录中建立。
+### 用户管理命令
+1. useradd
+
+2. passwd
+
+3. usermod
+
+4. chage
+
+5. userdel 用户名
+```
+    -r 删除用户同时删除家目录（常用）
+```
+6. su 
+    > 切换用户 su - root -c "useradd user3"
+    ```
+       -  切换用户同时连环境变量一起切换（切换必备，否则容易出错）
+       -c 仅执行一次命令，而不切换用户身份
+    ```
+7. id 用户名
+ > 查看用户id
