--- a/Linux/cmd/用户管理命令.md
+++ b/Linux/cmd/用户管理命令.md
@@ -52,3 +52,16 @@ root /root 权限550
     ```
 7. id 用户名
  > 查看用户id
+ 
+### 组管理命令
+
+1. groupmod
+> -n 新组名 -g （不建议改组名）
+2. groupadd
+> -g GID
+3. groupdel 
+> 删除组
+4. gpasswd
+> -a 用户名 组名 
+> -d 用户名 组名
+> 把用户加入组，把用户从组中删除
