--- a/Linux/cmd/权限管理.md
+++ b/Linux/cmd/权限管理.md
@@ -20,15 +20,21 @@ df -h 查看分区使用状况
 > 设定acl文件权限
 
 setfacl -m u:st:rx 文件/目录
-
+setfacl -x g:tgroup 文件/目录
+setfacl -m u:st:rx -R 文件/目录 *注意：这个-R必须放在-m后面*
+setfacl -m d:u:st:rx 目录 *d 代表目录内默认acl权限*
 ```
-    -m  设定acl权限 参数u：用户，g：组，用户名/组名，权限
+    -m  设定acl权限 参数u：用户，g：组，m：mask，用户名/组名/mask，权限
     -x  删除指定的acl权限
     -b  删除所有的acl权限
     -d  设定默认acl权限
     -k  删除默认acl权限
     -R  递归设定acl权限
 ```
+
+#### 最大有效权限
+
+mask 与 给用户或组的权限相与，得出的才是真正的权限 r & r r, r & - -
 
 
 ### 文件特殊权限
