--- a/Linux/cmd/权限管理.md
+++ b/Linux/cmd/权限管理.md
@@ -36,8 +36,11 @@ setfacl -m d:u:st:rx 目录 *d 代表目录内默认acl权限*
 
 mask 与 给用户或组的权限相与，得出的才是真正的权限 r & r r, r & - -
 
-
 ### 文件特殊权限
+
+1. SetUID
+2. SetGID
+3. Sticky BIT
 
 ### 文件系统属性chattr权限
 
