--- a/Linux/cmd/权限管理.md
+++ b/Linux/cmd/权限管理.md
@@ -38,9 +38,9 @@ mask 与 给用户或组的权限相与，得出的才是真正的权限 r & r r
 
 ### 文件特殊权限
 
-1. SetUID
-2. SetGID
-3. Sticky BIT
+1. SetUID 4
+2. SetGID 2 
+3. Sticky BIT 1 黏着位
 
 ### 文件系统属性chattr权限
 
