--- a/Linux/cmd/权限管理.md
+++ b/Linux/cmd/权限管理.md
@@ -38,10 +38,25 @@ mask 与 给用户或组的权限相与，得出的才是真正的权限 r & r r
 
 ### 文件特殊权限
 
-1. SetUID 4
-2. SetGID 2 
+1. SetUID 4 变成拥有者
+2. SetGID 2 变成所属组
 3. Sticky BIT 1 黏着位
 
 ### 文件系统属性chattr权限
+
+chattr \[+-=] \[选项] 文件或目录名
+
+charttr +i abc.txt
+charttr -i abc.txt
+` 
+    + 加权限 - 减权限
+    i 如果是文件，文件是只读。如果是目录，目录内不能添加删除文件。*注意：对root也生效*
+    a 如果是文件，只能读和加数据，如果是目录，只能加文件，改文件
+`
+- 查看 charttr 属性用 lsattr
+`
+    -a 显示全部文件
+    -d 显示目录属性，而不是目录中的文件属性
+`
 
 ### 系统命令sudo权限
