--- a/Linux/cmd/权限管理.md
+++ b/Linux/cmd/权限管理.md
@@ -44,6 +44,8 @@ mask 与 给用户或组的权限相与，得出的才是真正的权限 r & r r
 
 ### 文件系统属性chattr权限
 
+可以用blkid或mount命令确认一下这两个分区的文件系统
+
 chattr \[+-=] \[选项] 文件或目录名
 
 charttr +i abc.txt
