--- a/VCS/git/免密提交.md
+++ b/VCS/git/免密提交.md
@@ -26,4 +26,9 @@ $ scp -P 9092  yourname@210.22.155.236:/home/yupeng/.ssh/id_rsa   ~/.ssh/id_rsa 
 $ cd /home/chenchi/.ssh/  
 $ chmod 600 id_rsa  
 将服务器上密钥对中的私有密钥（id_rsa）用scp命令复制到你自己本地.ssh目录下，修改一下本地的id_rsa  
-文件权限，这样就好了。之后你用ssh 访问那台服务器时，就不用输入密码 了。  
+文件权限，这样就好了。之后你用ssh 访问那台服务器时，就不用输入密码 了。
+
+###将公钥保存在服务器
+ssh-copy-id -i ~/.ssh/id_rsa.pub git@192.168.130.133
+
+  
