--- a/SQL/Mysql/主从配置.md
+++ b/SQL/Mysql/主从配置.md
@@ -13,24 +13,7 @@
 
        SHOW MASTER STATUS;
        
-5 配置Slave从服务器(windows)，重启MySQL服务
-
-    找到MySQL安装文件夹修改my.ini文件，在[mysqld]下面增加下面几行代码
-    [mysqld]
-    server-id=2
-    relay-log-index=slave-relay-bin.index
-    relay-log=slave-relay-bin
-    
-6 Slave从服务器连接Master,启动Slave
-
-    change master to master_host='192.168.0.104', //Master 服务器Ip
-    master_port=3306,
-    master_user='repl',
-    master_password='mysql', 
-    master_log_file='master-bin.000001',//Master服务器产生的日志
-    master_log_pos=0;
-    
-7 Slave从服务器（Ubuntu）,启动Slave
+5 Slave从服务器（Ubuntu）,启动Slave
     
     (1) 修改my.cnf文件
         server-id=3
@@ -42,6 +25,23 @@
         ./bin/mysql 进入MySQL命令窗口
     
     (3) 连接Master
+        change master to master_host='192.168.0.104', //Master 服务器Ip
+        master_port=3306,
+        master_user='repl',
+        master_password='mysql', 
+        master_log_file='master-bin.000001',//Master服务器产生的日志
+        master_log_pos=0;
+
+
+6 配置Slave从服务器(windows)，重启MySQL服务
+
+    (1) 找到MySQL安装文件夹修改my.ini文件，在[mysqld]下面增加下面几行代码
+        [mysqld]
+        server-id=2
+        relay-log-index=slave-relay-bin.index
+        relay-log=slave-relay-bin
+    
+    (2) Slave从服务器连接Master,启动Slave
         change master to master_host='192.168.0.104', //Master 服务器Ip
         master_port=3306,
         master_user='repl',
