--- a/SQL/Mysql/主从配置.md
+++ b/SQL/Mysql/主从配置.md
@@ -22,9 +22,10 @@
         
     (2) 重启MySQL服务
         ./support-files/myql.server restart
-        ./bin/mysql 进入MySQL命令窗口
     
-    (3) 连接Master
+    (3) 进入MySQL命令窗口 
+    
+    (4) 连接Master
         change master to master_host='192.168.0.104', //Master 服务器Ip
         master_port=3306,
         master_user='repl',
