--- a/SQL/Mysql/主从配置.md
+++ b/SQL/Mysql/主从配置.md
@@ -16,33 +16,42 @@
 5 Slave从服务器（Ubuntu）,启动Slave
     
     (1) 修改my.cnf文件
+    
         server-id=3
         relay-log-index=slave-relay-bin.index
         relay-log=slave-relay-bin
         
     (2) 重启MySQL服务
+    
         ./support-files/myql.server restart
     
     (3) 进入MySQL命令窗口 
     
     (4) 连接Master
+    
         change master to master_host='192.168.0.104', //Master 服务器Ip
         master_port=3306,
         master_user='repl',
         master_password='mysql', 
         master_log_file='master-bin.000001',//Master服务器产生的日志
         master_log_pos=0;
+        
+    (5) 语句查看slave的设置是否正确
+    
+        SHOW SLAVE STATUS
 
 
 6 配置Slave从服务器(windows)，重启MySQL服务
 
     (1) 找到MySQL安装文件夹修改my.ini文件，在[mysqld]下面增加下面几行代码
+    
         [mysqld]
         server-id=2
         relay-log-index=slave-relay-bin.index
         relay-log=slave-relay-bin
     
     (2) Slave从服务器连接Master,启动Slave
+    
         change master to master_host='192.168.0.104', //Master 服务器Ip
         master_port=3306,
         master_user='repl',
