--- a/SQL/Mysql/主从配置.md
+++ b/SQL/Mysql/主从配置.md
@@ -8,6 +8,9 @@
         server-id=1   //给数据库服务的唯一标识，一般为大家设置服务器Ip的末尾号
         log-bin=master-bin
         log-bin-index=master-bin.index
+        
+        binlog-do-db=wwyt       //设置要同步的库
+        binlog-ignore-db=mysql  //忽略不同步的库
     
 4 查看日志，重启MySQL服务
 
