--- a/Linux/cmd/进程管理.md
+++ b/Linux/cmd/进程管理.md
@@ -1,4 +1,4 @@
-###进程管理
+###查看进程
 1. ps 获取进程的快照
 
         -a 全部信息
@@ -35,4 +35,20 @@
         + 位于后台的进程组；
         
 2. [top](http://www.cnblogs.com/ggjucheng/archive/2012/01/08/2316399.html) 时时查看进程
+
+###控制进程
+
+vi 内 !bash 可让vim在后台运行，然后输入exit命令就切换回vim页面
+
+命令后加“&”符号让命令在后台运行
+
+jobs 查看后台运行的命令
+fg %(job num) 将指定的jobs的id代表的命令放到前台执行 
+
+
+
+
+
+
+
 
