--- a/SQL/Mysql/主从配置.md
+++ b/SQL/Mysql/主从配置.md
@@ -61,3 +61,188 @@
         master_password='mysql', 
         master_log_file='master-bin.000001',//Master服务器产生的日志
         master_log_pos=0;
+        
+        
+        
+        
+
+
+
+vi /etc/sysconfig/iptables 
+>>>  CentOS 7.0默认使用的是firewall作为防火墙，使用iptables必须重新设置一下
+1、直接关闭防火墙
+systemctl stop firewalld.service           #停止firewall
+systemctl disable firewalld.service     #禁止firewall开机启动
+2、设置 iptables service
+yum -y install iptables-services
+如果要修改防火墙配置，如增加防火墙端口3306
+vi /etc/sysconfig/iptables 
+增加规则
+-A INPUT -m state --state NEW -m tcp -p tcp --dport 3306 -j ACCEPT
+
+保存退出后
+systemctl restart iptables.service #重启防火墙使配置生效
+systemctl enable iptables.service #设置防火墙开机启动
+
+在slave服务器show slave status:
+Fatal error: The slave I/O thread stops because master and slave have equal MySQL server UUIDs; these UUIDs must be different for replication to work.
+首先检查：
+mysql> show variables like ‘server_id';
++—————+——-+
+| Variable_name | Value |
++—————+——-+
+| server_id | 3 |
++—————+——-+
+主从并不一样，排除该问题。
+继续排查，找到原因在于，拷贝整个data目录，把auto.cnf文件也拷贝过来了，里面记录了数据库的uuid，每个库的uuid应该是不一样的。
+[auto]
+server-uuid=6dcee5be-8cdb-11e2-9408-90e2ba2e2ea6
+解决办法，按照这个16进制格式，随便改下，重启mysql即可。
+
+
+
+
+change master to
+      master_host='192.168.0.6',
+      master_user='testuser',
+      master_password='123456',
+      master_log_file='mysql-bin.000011',
+      master_log_pos=524; 
+
+
+
+主服务器：centos6.5 IP:192.168.1.101
+
+从服务器：centos6.5 IP:192.168.1.102
+
+一、主服务器相关配置
+
+　　1、创建同步账户并指定服务器地址
+
+[root@localhost ~]mysql -uroot -p
+mysql>use mysql
+mysql>grant replication slave on *.* to 'testuser'@'192.168.1.102' identified by '12345678';
+mysql>flush privileges #刷新权限
+
+　　授权用户testuser只能从192.168.1.102这个地址访问主服务器192.168.1.101的数据库，并且只具有数据库备份的权限
+
+　　2、修改/etc/my.cnf配置文件vi /etc/my.cnf
+
+[mysqld]下添加以下参数，若文件中已经存在，则不用添加
+server-id=1  
+log-bin=mysql-bin  #启动MySQL二进制日志系统，
+binlog-do-db=ourneeddb  #需要同步的数据库
+binlog-ignore-db=mysql  #不同步mysql系统数据库，若还有其它不想同步的，继续添加
+[root@localhost ~]/etc/init.d/mysqld restart #重启服务
+
+　　3、查看主服务器master状态(注意File与Position项，从服务器需要这两项参数)
+
+mysql> show master status;
++------------------+----------+--------------+------------------+
+| File            | Position | Binlog_Do_DB | Binlog_Ignore_DB |
++------------------+----------+--------------+------------------+
+| mysql-bin.000012 |      120 | ourneeddb| mysql            |
++------------------+----------+--------------+------------------+
+
+　　4、导出数据库
+
+　　导出数据库之前先锁定数据库
+
+　　flush tables with read lock;    #数据库只读锁定命令，防止导出数据库的时候有数据写入
+
+　　unlock tables; #解除锁定
+
+　　导出数据库结构及数据：mysqldump -uroot -p ourneeddb > /home/ourneeddb.sql
+
+　　导出存储过程及函数　：mysqldump -uroot -p -ntd -R ourneeddb > ourneeddb_func.sql
+
+　　tips:-ntd导出存储过程、-R导出函数
+
+　二、从服务器相关配置
+
+　　1、修改/etc/my.cnf配置文件vi /etc/my.cnf
+
+[mysqld]下添加以下参数，若文件中已经存在，则不用添加
+server-id=2  #设置从服务器id，必须于主服务器不同
+log-bin=mysql-bin  #启动MySQ二进制日志系统
+replicate-do-db=ourneeddb  #需要同步的数据库名
+replicate-ignore-db=mysql  #不同步mysql系统数据库
+[root@localhost~ ]/etc/init.d/mysqld restart #重启服务
+
+　　2、导入数据库
+
+　　导入过程这里不做阐述
+
+　  3、配置主从同步
+
+[root@localhost~ ]mysql -uroot -p
+mysql>use mysql 
+mysql>stop slave;
+mysql>change master to
+      master_host='192.168.1.101',
+      master_user='testuser',
+      master_password='12345678',
+      master_log_file='mysql-bin.000012',
+      master_log_pos=120;  #log_file与log_pos是主服务器master状态下的File与Position
+mysql>start slave;
+mysql>show slave status\G;
+
+*************************** 1. row ***************************
+Slave_IO_State: Waiting for master to send event
+Master_Host: 192.168.1.101
+Master_User: testuser
+Master_Port: 3306
+Connect_Retry: 60
+Master_Log_File: mysql-bin.000012
+Read_Master_Log_Pos: 120
+Relay_Log_File: orange-2-relay-bin.000003
+Relay_Log_Pos: 283
+Relay_Master_Log_File: mysql-bin.000012
+Slave_IO_Running: Yes
+Slave_SQL_Running: Yes
+Replicate_Do_DB: orange
+Replicate_Ignore_DB: mysql,test,information_schema,performance_schema
+Replicate_Do_Table:
+Replicate_Ignore_Table:
+Replicate_Wild_Do_Table:
+Replicate_Wild_Ignore_Table:
+Last_Errno: 0
+Last_Error:
+Skip_Counter: 0
+Exec_Master_Log_Pos: 120
+Relay_Log_Space: 1320
+Until_Condition: None
+Until_Log_File:
+Until_Log_Pos: 0
+Master_SSL_Allowed: No
+Master_SSL_CA_File:
+Master_SSL_CA_Path:
+Master_SSL_Cert:
+Master_SSL_Cipher:
+Master_SSL_Key:
+Seconds_Behind_Master: 0
+Master_SSL_Verify_Server_Cert: No
+Last_IO_Errno: 0
+Last_IO_Error:
+Last_SQL_Errno: 0
+Last_SQL_Error:
+Replicate_Ignore_Server_Ids:
+Master_Server_Id: 1
+Master_UUID: 773d2987-6821-11e6-b9e0-00163f0004f9
+Master_Info_File: /home/mysql/master.info
+SQL_Delay: 0
+SQL_Remaining_Delay: NULL
+Slave_SQL_Running_State: Slave has read all relay log; waiting for the slave I/O thread to update it
+Master_Retry_Count: 86400
+Master_Bind:
+Last_IO_Error_Timestamp:
+Last_SQL_Error_Timestamp:
+Master_SSL_Crl:
+Master_SSL_Crlpath:
+Retrieved_Gtid_Set:
+Executed_Gtid_Set:
+Auto_Position: 0　　
+
+注意查看Slave_IO_Running: Yes  Slave_SQL_Running: Yes 这两项必须为Yes 以及Log_File、Log_Pos要于master状态下的File,Position相同
+
+如果都是正确的，则说明配置成功！
