--- a/SQL/Mysql/实战配置.md
+++ b/SQL/Mysql/实战配置.md
@@ -1,2 +1,8 @@
 ### root忽略密码登录
 skip-grant-tables
+
+    [mysqld]
+    
+    skip-grant-tables
+    basedir = E:\workspace\phpstudy\MySQL
+    datadir = E:\workspace\phpstudy\MySQL\data
