--- a/Linux/cmd/防火墙.md
+++ b/Linux/cmd/防火墙.md
@@ -23,6 +23,13 @@ firewall-cmd  --zone=public --add-port=8080-8081/tcp   //临时
 firewall-cmd --permanent --zone=public --list-services    //服务空格隔开  例如 dhcpv6-client https ss   
 firewall-cmd --permanent --zone=public --list-ports //端口空格隔开  例如  8080-8081/tcp 8388/tcp 80/tcp  
 systemctl restart firewalld.service  //修改配置后需要重启服务使其生效  
-firewall-cmd --zone=public --query-port=8080/tcp  //查看服务是否生效（例：添加的端口为8080）  
+firewall-cmd --zone=public --query-port=8080/tcp  //查看服务是否生效（例：添加的端口为8080）
+
+
+### redis端口设置。允许192.168.142.166访问6379端口
+firewall-cmd --permanent --add-rich-rule="rule family="ipv4" source address="192.168.142.166" port protocol="tcp" port="6379" accept"
+
+  
 参考  http://www.jianshu.com/p/c9c24b3a1c53  
 http://blog.csdn.net/0210/article/details/60872966  
+http://blog.csdn.net/qguanri/article/details/51673845
