--- a/Network/Internte/互联网接入.md
+++ b/Network/Internte/互联网接入.md
@@ -5,3 +5,11 @@
 ### ADSL连接
 ADSL（Asymmetrical Digital Subscriber Loop）非对称数字用户环路
 
+#### 家庭网络详解
+pppoe 基于以太网的点对点通信
+
+ssid 安全识别码
+
+###cable MODEM连接
+cable MODEM（线缆调制解调器）是通过有线电视网来发送接收数据的
+
