--- a/Linux/cmd/手册.md
+++ b/Linux/cmd/手册.md
@@ -9,3 +9,9 @@
 8. Administrative Commands （系统管理命令）
 9. 其他（Linux特定的）， 用来存放内核例行程序的文档（API 内核调用）
 10. tcl或tk命令
+
+### 安装man 5 
+> yum  install -y man-pages   
+       
+       列出在哪些man中 -f 
+       在所有章节中查询 -a
