--- a/Linux/cmd/用户管理命令.md
+++ b/Linux/cmd/用户管理命令.md
@@ -38,6 +38,10 @@ root /root 权限550
 ### 用户管理命令
 1. useradd
 
+        -G
+        -s
+        
+
 2. passwd
 
 3. usermod
@@ -71,4 +75,13 @@ root /root 权限550
 4. gpasswd
 > -a 用户名 组名 
 > -d 用户名 组名
+> -M 用户名1,用户名2 组名
 > 把用户加入组，把用户从组中删除
+
+### 添加用户时默认项参考源
+
+/etc/default/useradd
+
+/etc/login.defs
+
+/etc/skel
