--- a/Linux/cmd/权限管理.md
+++ b/Linux/cmd/权限管理.md
@@ -70,3 +70,26 @@ charttr -i abc.txt
 
 ### chmod
 u g o u+x u-x u=x
+
+### suid 
+        u+s 文件
+### sgid
+        g+s 目录
+### sticky
+        o+t 目录
+        root u 目录的所有者可以删    
+        
+        
+    4表示SUID  
+    2表示SGID  
+    1表示SBIT
+    
+### 文件属性 
+
+lsattr
+
+chattr 
+    
+### umask 
+> 默认要减去的权限
+    
