--- a/Linux/cmd/基本命令.md
+++ b/Linux/cmd/基本命令.md
@@ -35,7 +35,26 @@
 ### wc 
         
         -l
+        
+### lscpu
 
+### ps 
+
+    -ef 
+    aux
+    axo user,%cpu,$mem
+    "-"倒排序 --sort -%cpu
+
+### pgrep
+
+### md5sum
+
+### top
+
+    -d 1
+    -d 1 -p 1067
+    -d 1 -u myslq
+    -d 1 -b -n 2 > top.txt
 
 
         
