--- a/Linux/cmd/进程管理.md
+++ b/Linux/cmd/进程管理.md
@@ -45,8 +45,34 @@ vi 内 !bash 可让vim在后台运行，然后输入exit命令就切换回vim页
 jobs 查看后台运行的命令
 fg %(job num) 将指定的jobs的id代表的命令放到前台执行 
 
+### 进程优先级
+>cls是进程调度程序，其中有多种调度策略，SCHED_OTHER是最次的策略，nice值就是这个。
+
+### nice
+
+    设置进程的优先级 nice -n -20 ls
+    
+### renice 
+> 重新设置nice值 
+
+### jobs
+> 作业控制，允许一个shell实力来运行和管理多个命令s
+
+### bg
+>在后台运行
+
+### fg
+>在前台运行
+
+### kill %(job num)
+>作业号终止作业
 
 
+### screen
+
+    -list 列出所有screen
+    -r 调出screen
+    -S 起一个名字
 
 
 
