--- a/Linux/cmd/进程管理.md
+++ b/Linux/cmd/进程管理.md
@@ -74,7 +74,14 @@ fg %(job num) 将指定的jobs的id代表的命令放到前台执行
     -r 调出screen
     -S 起一个名字
 
+### proc 进程目录
 
+$$ 代表当前进程号
 
+进程号目录下的fd目录是文件描述符，每个进程通过建立文件描述符打开文件，文件描述符号是有限的，所以每个进程打开的文件数也 
+是有限的。也可以通过控制文件描述符来控制进程打开文件的数量
 
+### ulimit
+
+    查看进程打开文件的数量 -
 
