--- a/Linux/cmd/进程管理.md
+++ b/Linux/cmd/进程管理.md
@@ -45,6 +45,9 @@ vi 内 !bash 可让vim在后台运行，然后输入exit命令就切换回vim页
 jobs 查看后台运行的命令
 fg %(job num) 将指定的jobs的id代表的命令放到前台执行 
 
+### killall
+> 可以跟进程名
+
 ### 进程优先级
 >cls是进程调度程序，其中有多种调度策略，SCHED_OTHER是最次的策略，nice值就是这个。
 
