--- a/Linux/cmd/重定向.md
+++ b/Linux/cmd/重定向.md
@@ -11,3 +11,14 @@
 输入重定向
 
 0<  
+
+混合输出重定向
+
+&>
+
+删除/dev/null，再恢复
+
+mknod -m 666 /dev/null c 1 3
+
+### subshell
+ (cd;ls) 括号能够开启子shell，就避免了对当前shell的影响
