--- a/Linux/cmd/存储.md
+++ b/Linux/cmd/存储.md
@@ -13,3 +13,23 @@
 MBR <2TB fdisk      14个分区（4个主分区）
 
 GPT >或<2TB gdisk(parted) 128个主分区
+
+
+### 
+
+### gdisk
+
+### mount 
+
+    相当于开机挂载 -a
+    -t
+
+### mkfs.*
+
+### df
+
+### blkid
+
+### 自动挂载
+
+   vim /etc/fstab
