--- a/Linux/cmd/存储.md
+++ b/Linux/cmd/存储.md
@@ -15,6 +15,18 @@ MBR <2TB fdisk      14个分区（4个主分区）
 GPT >或<2TB gdisk(parted) 128个主分区
 
 
+###
+    $[419230433/2/2**20]
+
+### fdisk
+> DOS disklabel （MBR）
+
+
+    查看分区详情 fdisk -l /dev/vba
+    
+### partprobe 
+> 不重启的情况下更新分区表
+
 ### 
 
 ### gdisk
