--- a/Linux/cmd/文件系统管理.md
+++ b/Linux/cmd/文件系统管理.md
@@ -42,7 +42,13 @@ linux 默认不支持ntfs文件系统，因为它没有默认加载ntfs驱动
 
 虚拟机添加硬盘
 
+disk mbr 512（1个扇区） = 446（引导程序） + 64（主分区表） + 2（）
 
+fat文件系统win和都识别linux
+
+superblock：记录文件系统的整体信息，包括inode/block的总量、使用量、剩余量，以及文件系统的格式等
+inode：记录文件的属性（文件的元数据metadata），一个文件占用一个inode，同时记录文件数据所在的block number;
+block:实际存储文件地方，大文件可以占用多个block
 
 
 
