--- a/Linux/cmd/基本命令.md
+++ b/Linux/cmd/基本命令.md
@@ -57,6 +57,33 @@
     -d 1 -u myslq
     -d 1 -b -n 2 > top.txt
 
+### watch 
 
-        
+    间隔时间 -n
+    
+     ex：watch -n1 'df -i'
+     0.5s  ex：watch -n.5 'df -i'
+     
+### time
+> 统计命令所用时间  
+
+### ssh
+
+### ssh-keygen
+
+### ssh-copy-id
+
+    ssh-keygen
+    ssh-copy-id 192.168.0.111
+    
+    
+### lsof
+> 列出进程打开的文件
+    
+    lsof | grep  
+    ll /proc/953/fd
+    less /proc/953/fd/3 > /var/log/message
+    
+
+ 
         
