--- a/Linux/cmd/存储.md
+++ b/Linux/cmd/存储.md
@@ -35,12 +35,28 @@ GPT >或<2TB gdisk(parted) 128个主分区
 
     相当于开机挂载 -a
     -t
+    -o
+    不卸载的同时重新加载挂载选项 -o remount
 
 ### mkfs.*
 
 ### df
 
 ### blkid
+    blkid /dev/sda1
+    
+### 挂载iso文件
+1. 将光盘制作成iso
+    dd if=/dev/cdrom of=/centos7u3.iso
+    dd < /dev/cdrom > /centos7u3.iso
+    
+2. 将文件制成iso
+
+    genisoimage -o /tmp/etc.iso -r /etc
+    file /tmp/etc.iso 
+
+
+
 
 ### 自动挂载
 
