--- a/Linux/cmd/文件系统管理.md
+++ b/Linux/cmd/文件系统管理.md
@@ -30,6 +30,7 @@ mount
 > 光盘的设备文件名 cdrom 或 sr0
 > mount -t iso9660 /dev/cdrom /mnt/cdrom #光盘
 > mount /dev/sr0 /mnt/cdrom  
+        noloop
   u盘的设备文件名 sdb（随机分配）
 
 ### 支持ntfs文件系统
