--- a/Linux/cmd/网络命令.md
+++ b/Linux/cmd/网络命令.md
@@ -25,9 +25,96 @@ netstat -an（包含 established） -rn -tuln (listen
 setup (仅限 redhat)
 
 service network restart 
+### CentOS 6
 
-## 挂载
-mount 
+    systemctl restart network
 
-umount
+### 网卡命名
+en 是以太网，还有wl局域网， ww广域网
+o 是on-borad 内置主板上的
+s 是hotplug slot 热插拔的
+p 是PCI接口的 geograhic location
+number 是 index，ID或port
 
+### centos 7推荐 networkManager管理网络
+
+### nmcli 
+> cli是command line的意思
+
+nmcli device 查看连接状态
+
+        #添加一个链接，指定ip。如果不设置ip就是自动获取
+        #其实就是创建一个配置文件在 vim /etc/sysconfig/network-scripts/ifcfg-enp2s0
+        #自动激活当前连接autoconnect
+        nmcli conn add con-name enp2s0 autoconnect yes ifname enp2s0 type ethernet ip4 10.10.10.10/24 gw4 10.10.10.254
+        #修改 modify
+        nmcli conn modify enp2s0 autoconnect yes
+        #激活 up
+        nmcli conn up enp2s0
+
+
+### nmtui
+> tui是 text user interface 文本用户接口
+
+
+### nm-connect-editor
+> gui 是 图形用户接口
+ 
+
+### 测试工具
+> ping 使用ICMP协议
+
+    #路由
+    ip r
+    #如果看到<NO-CARRIER,...>在ONBOOT=yes的情况下是物理网线或网卡问题（没插好）
+    ip a
+    #同上会更详细的列出网卡信息
+    ethtool ens33
+    #
+    ip a s eth0
+    #邻居
+    ip neigh
+    #查看设备传输信息
+    ip -s link show eth0
+    #
+    hostname
+    #
+    ping -c2 www.baidu.com
+    #跟踪
+    traceroute www.baidu.com
+    #
+    tracepath www.baidu.com
+
+### 临时配置网络信息
+
+    #netmask
+    ip addr add dev eth1 2.2.2.2/24
+    ip addr del dev eth1 2.2.2.2/24
+    
+    #gateway
+    ip route del default
+    ip route add default via 192.168.111.19 //到达任意网络下一跳是192.168.111.19
+    ip route add 10.101.10.0/24 via 192.168.111.19 //到达10.101.10.0/24下一跳是192.168.111.19
+    
+
+### ss -tnlp 监听tcp
+### ss -atn
+### ss -anu 监听udp
+
+### 网卡重命名
+    #装了系统后
+    DEVICE=eth0
+    NAME=eth0
+    vim /etc/sysconfig/grub
+    #在GRUB_CMDLINE_LINUX这一行后面加入 " net.ifnames=0"
+    grub2-mkconfig -o /boot/grub2/grub.cfg
+    #重启
+    reboot
+    
+    #装系统前
+    #在install centos 那里按tab键，加入" net.ifnames=0"
+    
+ ### network
+ 
+    #全虚拟化 rtl8139 e 10000
+    #半虚拟化 virtio 
