--- a/Linux/cmd/包管理.md
+++ b/Linux/cmd/包管理.md
@@ -1,3 +1,44 @@
 ### yum
+    #默认源
+    /etc/yum.repos.d/
+    #谁提供了这个命令  
+    yum provides locate
+    #列出现有的yum源
+    yum repolist
+    #清除原有yum数据信息
+    yum clean all
+    #更新yum库信息
+    yum makecache
 
-    谁提供了这个命令  yum provides locate
+### 换源
+
+    mv /etc/yum.repos.d/CentOS-Base.repo /etc/yum.repos.d/CentOS-Base.repo.backup
+    wget  -P http://mirrors.163.com/.help/CentOS7-Base-163.repo /etc/yum/repos.d/CentOS-Base.repo
+    yum clean all
+    yum makecache
+    
+### EPEL源
+    
+    #国外
+    yum -y install epel-release 
+    #国内
+    wget -O /etc/yum.repos.d/epel.repo http://mirrors.aliyun.com/repo/epel-7.repo
+    
+### 第三方源
+> nginx zabbix 等官方源
+
+### 卸载
+
+    yum -y remve httpd
+
+### 组
+
+    yum groupinfo mariadb
+    yum groupinstall mariadb
+    yum grouplist
+    
+ ### yum
+    info {package name}
+    list installed {package name}
+    
+    yum list installed httpd &>/dev/null && echo "1" || echo "0"
