--- a/Linux/cmd/基本命令.md
+++ b/Linux/cmd/基本命令.md
@@ -1,3 +1,7 @@
+### mv
+    
+     mv /etc/yum.repos.d/{*.repo,backup}
+    
 ### cp
 
         interactive 交互式     -i 
@@ -86,5 +90,17 @@
     
 ### du -sh
 > 查看目录大小
+
+### lsof
+
+### uname 
+> 位数
+
+    -r
+    -a
+    -m
+
+### /etc/redhat-relase
+> 系统版本
  
         
