--- a/Linux/cmd/包管理.md
+++ b/Linux/cmd/包管理.md
@@ -27,9 +27,23 @@
 ### 第三方源
 > nginx zabbix 等官方源
 
+### 查询
+
+    yum list | grep chinese
+    #查找名字和描述
+    yum search  {keyword}
+    #谁提供了这个命令  
+    yum provides locate
+    #查找vsftpd属于哪个包
+    yum search */vsftpd.conf
+
 ### 卸载
 
     yum -y remve httpd
+    yum history 
+    yum history info
+    #将依赖也卸载
+    yum history undo 6
 
 ### 组
 
