--- a/Linux/cmd/包管理.md
+++ b/Linux/cmd/包管理.md
@@ -9,6 +9,9 @@
     yum clean all
     #更新yum库信息
     yum makecache
+    #只下载不安装
+    yum install xx --downloadonly
+    #用于补全的软件包
 
 ### 换源
 
@@ -51,8 +54,25 @@
     yum groupinstall mariadb
     yum grouplist
     
- ### yum
-    info {package name}
-    list installed {package name}
-    
+ ### 
+ 
+    yum info {package name}
+    yum list installed {package name}
     yum list installed httpd &>/dev/null && echo "1" || echo "0"
+    
+    #作为yum服务器，安装完包之后不想删除包，就要开启yum缓存
+    vim /etc/yum.conf  
+    keepcache=1
+    yum clean all
+    yum -y update
+    find /var/cache/yum/x86_64/7/ -iname "*.rpm" -exec cp -rf {} /var/ftp/update \;
+    yum -y install createrepo  
+    createrepo /var/ftp/update
+    #客户端
+    vim /etc/yum.repos.d/update.repo
+    [update]
+    name=centos update
+    baseurl=ftp://192.168.1.102/update
+    gpgcheck=0 /*签名检查*/
+    enabled=1
+    yum repolist
