--- a/Linux/cmd/包管理.md
+++ b/Linux/cmd/包管理.md
@@ -54,7 +54,22 @@
     yum groupinstall mariadb
     yum grouplist
     
- ### 
+ ### 开启yum签名
+    
+    #导入key就不需要gpgkey
+    rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7 //redhat
+    #或
+    rpm --import http://etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7 //redhat
+    vim /etc/yum.repo.d/CentOS-Base.repo
+    gpgcheck=1
+    gpgkey=http://
+           file://
+ 
+ ### 全局配置（不推荐）
+    
+     vim /etc/yum.conf
+    
+ ### saltstack asible puppet
  
     yum info {package name}
     yum list installed {package name}
@@ -76,3 +91,24 @@
     gpgcheck=0 /*签名检查*/
     enabled=1
     yum repolist
+    
+ ### rpm
+    
+    #安装
+    rpm -ivh
+    #删除
+    rpm -e 
+    #查询文件属于哪个包
+    rpm -qf
+    #查询一个包安装了哪些文件 (yum 貌似不行)
+    rpm -ql
+    #查询一个没有安装的rpm包
+    rpm -qpi {package}
+    
+ ### 查看当前支持的动态库
+ 
+    #加载所有动态库
+    ldconfig 
+    #查看当前支持的动态库
+    ldconfig -p
+    
