--- a/Linux/cmd/包管理.md
+++ b/Linux/cmd/包管理.md
@@ -100,6 +100,8 @@
     rpm -e 
     #查询文件属于哪个包
     rpm -qf
+    #查询包的配置文件
+    rpm -qc
     #查询一个包安装了哪些文件 (yum 貌似不行)
     rpm -ql
     #查询一个没有安装的rpm包
