--- a/Linux/cmd/网络命令.md
+++ b/Linux/cmd/网络命令.md
@@ -118,3 +118,9 @@ nmcli device 查看连接状态
  
     #全虚拟化 rtl8139 e 10000
     #半虚拟化 virtio 
+    
+ ### tcpdump
+ >抓包
+ 
+    #获取网卡enp0s 514端口的包
+    tcpdump -i enp0s -nn port 514
