--- a/Linux/cmd/网络文件系统.md
+++ b/Linux/cmd/网络文件系统.md
@@ -1,34 +1,83 @@
-### nfs网络文件系统
-1.　yum安装  
-        
-        yum -y nfs-utils
+### 查看系统版本
+lsb_release -a
+### 查看网卡
+cat /etc/sysconfig/network-scripts/ifcfg-eth0 
+### 上传下载
+up    scp -r root@192.168.6.253:/root/testDir/ /root/test/  
+down   scp -r /root/test/ root@192.168.6.253:/root/testDir/
+### ssh禁止超时
+/etc/ssh/sshd_config 
+
+“ClientAliveInterval指定了服务器端向客户端请求消息的时间间隔, 默认是0, 不发送.而ClientAliveInterval 60表示每分钟发送一次, 然后客户端响应, 这样就保持长连接了.这里比较怪的地方是:不是客户端主动发起保持连接的请求(如FTerm, CTerm等),而是需要服务器先主动。
+另外,至于ClientAliveCountMax, 使用默认值3即可.ClientAliveCountMax表示服务器发出请求后客户端没有响应的次数达到一定值, 就自动断开。正常情况下, 客户端不会不响应。“
+centos7 重启ssh： systemctl restart sshd
+
+### 显式的修改一行
+sed -i "s/AA/aaaaa/g" test.c
+
+### 网络文件系统
+将远程目录挂载到本机
+sudo mount -t nfs -o tcp -o nolock IP:/dir /mnt  
+配置文件 /etc/exports  
+\*是ip sync是同步，表示其他人能看到目录的修改
+/home/用户名/nfs \*(rw,sync,no_root_squash)  
+然后创建目录/home/用户名/nfs
+最后重启服务
+/etc/init.d/nfs-kernel-server restart
+exportfs -r
+
+
+### NAS之NSF
+> 集中式网络文件系统，中小型web服务首选，专属linux
     
-2. 配置共享文件
+       yum install -y nfs-utils
+       #服务端添加共享文件
+       vim /etc/exports
+       /webdata 192.168.0.0/24 （rw,no_root_squash）
+       #服务端查看共享文件
+       exportfs -v
+       #客户端挂载文件
+       mount -t nfs 192.168.0.111:/webdata /var/www/html
+       #客户端查看远程挂载
+       showmount -e 192.168.0.111 //配hosts也行
+       #自动挂载
+       vim /etc/fstab
+       192.168.0.122:/webdata /var/www/html nfs default 0 0 
 
-编辑 /etc/exports 文件，加入/home/nfs   192.168.130.0/24(rw,sync)
-> 这句话意思是：允许 网段192.168.130.0来源机对/home/nfs目录可同步读写。24是掩码位数3*8
+### NAS之CIFS
+> 类似NSF常用于win平台与linux之间文件共享，是samba的一部分
 
-3. 启动nfs服务
-
-        systemctl enable rpcbind.service
-        systemctl enable nfs-server.server
-        systemctl start rpcbind.service
-        systemctl start nfs-server.server
-        
-4. 查看nfs
-
-        rpcinfo -p 查看启用端口
-        exportfs   查看共享目录
-     
-5. 让防火墙开放查看到的端口
-        
-        firewall-cmd --permanent --add-port=111/tcp
-        ...
-        firewall-cmd --reload
-        
-6. 客户端映射
-
-        systemctl enable rpcbind.service
-        systemctl start rpcbind.service
-        showmount -e 192.168.130.133
-        mount -t nfs 192.168.130.133:/home/nfs /home/nfs
+    #安装，cifs，服务器可以不装客户端必须装
+    yum -y install samba cifs-utils
+    #添加samba用户和密码
+    smbpasswd -a alice
+    #samba共享
+    vim /etc/samba/smb.conf
+    ;共享名
+    [data]
+        path = /data
+        ;valid users = alice jack
+        ;host allow = 192.168.122.
+        ;write list = jack
+        writable = yes
+    #启动samba 有两个进程
+    systemctl restart nmb smb
+    systemctl enable nmb smb
+    firewall-cmd --permanent --add-service samba
+    firewall-cmd --permanent --add-service samba-client
+    firewall-cmd --permanent --add-service mountd
+    sed -i '/SELINUX=/cSELINUX=disabled' /etc/selinux/config
+    setenforce 0
+    #win端win+r
+    //192.168.0.111
+    映射网络驱动器
+    #linux端
+    yum -y install samba-client cifs-utils 
+    #查看共享服务器“%”是密码
+    smbclient -L 192.168.0.111 --user=alice%1
+    #挂载
+    mount -t cifs -o user=alice,pass=1 //192.168.0.111/data /home/mydata
+    vim /etd/fstab
+    //192.168.0.100/data /home/mydata cifs defaults,user=alice,pass=1  0 0
+    mount -a
+    
