--- a/Linux/shell/基础.md
+++ b/Linux/shell/基础.md
@@ -1,2 +1,66 @@
 ### 作用
 1. 服务器初始化 (update install timezoon, security)
+
+### shebang
+> \“#!” 声明默认使用哪种解释器（只在第一行有效）
+
+### bash 混入其他解释语言
+
+    #! /usr/bin/bash
+    ping 102.09.98.8,
+    
+    /usr/bin/python <<-EOF
+        print "hello world"
+    EOF
+    
+### sub shell
+> 默认执行shell实在子shell中执行，使用“source”或“.”执行是在当前shell
+
+    #! /usr/bin/bash
+    cd /home/
+    ls
+ 
+    source test.sh //如果希望在shell脚本中定义当前shell的变量，就要指定在当前shell执行
+    
+### 环境文件
+
+    #系统级一套，登陆时执行
+    /etc/profile
+    /etc/bashrc
+    #用户级一套,登陆时执行
+    ~/.bash_profile
+    ~/.bashrc
+    #离开shell执行
+    ~/.bash_logout
+    ~/.bash_history
+    
+### bash-comple*
+
+### “！”执行历史命令
+    
+    #从历史中找第几条命令
+    ![num] 
+    #从历史中找以某些字符串开头的命令
+    ![string] 
+    #最后执行的命令的参数
+    !$
+    #上一个命令
+    !!
+
+### 命令快捷键
+
+    ctrl+
+    ^D => logout 
+    ^L => logout 
+    ^K =>  
+    ^U =>  
+    ^Y => 撤销K和U的 
+    ^S => 锁屏 
+    ^Q => 解屏
+  
+ ### screen
+ 
+    screen -S screenNamge
+    eixt;
+    screen -list
+    screen -r 1209
