--- a/Linux/shell/基础.md
+++ b/Linux/shell/基础.md
@@ -58,9 +58,110 @@
     ^S => 锁屏 
     ^Q => 解屏
   
- ### screen
+### screen
  
     screen -S screenNamge
     eixt;
     screen -list
     screen -r 1209
+    
+### 位置变量
+  
+     $0，$1，$2, $3 ....
+     
+### 预定义变量  
+  
+    # 当前脚本的pid
+    $$ 
+    # 
+    $! 
+    $# 
+    $? 
+    $* 
+    $@ 
+    $_
+    
+ ### 运算
+ 
+    expr  1+2
+    expp $n1+ $n2
+    
+    echo $(($n1+$n2))
+    echo $((n1+n2))
+  
+    echo $[1+2]
+    echo $[2**5]
+    echo $[n1+n2]
+  
+    let sum = 2+1
+    let i++
+    
+    echo  "2*4" | bc
+    echo  "2^4" | bc
+    echo "scale=2;6/4"
+    awk 'BEGIN{print 1/2}'
+    echo "print 5.0/2" | python
+  
+### 内容替换、删除和长度
+    
+    #获取变量内容的长度
+    url = www.abc.com
+    echo ${#url}
+    #从左向右删，删除"#"后面的字符
+    echo ${url#www.}
+    #从左向右删，删到最后一个点
+    echo ${url##*.}
+    #从右向左删
+    echo ${url%cn}
+    #从右向左删，删到最后一个点
+    echo ${url%%*.}
+    #字符串切割取出,从第0个取，一共取5个
+    echo ${url:0:5}
+    #取出,从第5个取，取到最后
+    echo ${url:5}
+    #从左向右替换,将sina换成baidu
+    echo ${url/sina/baidu}
+    #从左向右，将所有sina换成baidu
+    echo ${url//sina/baidu}
+  
+### 默认值
+> 有“:”对空值起作用，没“:”对空值不起作用
+“+”对已定义起作用（不赋值），“-”对未定义起作用（不赋值）
+“?”对已定义起作用，  “=”对未定义起作用（赋值）
+       
+      #给变量加默认值。如果变量已定义则无效
+      echo ${var1-aaaaa}
+      #给变量加默认值。如果变量不为空则无效
+      echo ${var1:-aaaaa}
+      #给变量加默认值。如果变量未定义则无效
+      echo ${var1+aaaaa}
+      #给变量加默认值。如果变量为空则无效
+      echo ${var1:+aaaaa}
+      #给变量加默认值。如果变量定义则无效
+      echo ${var1=aaaaa}
+      #给变量加默认值。如果变量不为空则无效
+      echo ${var1:=aaaaa}
+      #给变量加默认值。如果变量已定义则无效
+      echo ${var1?aaaaa}
+      #给变量加默认值。如果变量不为空则无效
+      echo ${var1:?aaaaa}
+      
+  
+### 条件表达式
+
+    []
+    #支持正则
+    [[]]
+    
+    
+  
+### 调试shell
+
+    #检查语法错误
+    sh -n 1.sh
+    #调试执行
+    sh -vx 1.sh
+  
+  
+  
+  
