--- a/Linux/shell/基础.md
+++ b/Linux/shell/基础.md
@@ -162,6 +162,18 @@
     #调试执行
     sh -vx 1.sh
   
+### 元字符
+
+    #所有多个字符
+    *
+    #一个字符 
+    ? 
+    #子shell
+    () 
+    #其中的一个
+    [] 
+    #集合
+    {}
   
   
   
