--- a/Linux/cmd/进程管理.md
+++ b/Linux/cmd/进程管理.md
@@ -76,6 +76,8 @@ fg %(job num) 将指定的jobs的id代表的命令放到前台执行
     -list 列出所有screen
     -r 调出screen
     -S 起一个名字
+    kill 一个 screen
+    -X -S 4588 quit
 
 ### proc 进程目录
 
