--- a/Language/Java/error/陷阱.md
+++ b/Language/Java/error/陷阱.md
@@ -5,3 +5,11 @@
     // Look inside c:\users
 
     
+### 注意不要编写返回引用可变对象的访问器方法 
+> 如果需要返回一个可变对象的引用 , 应该首先对它进行克隆 ( clone )
+
+    class Employee{
+        public Date getHireDay(){
+            return (Date) hireDay.clone(); //Ok
+        }
+    }
