--- a/SQL/Mysql/用户权限.md
+++ b/SQL/Mysql/用户权限.md
@@ -32,7 +32,9 @@
 
 　　>> grant select,insert,update,delete on *.* to testuser@localhost identified by "123456"  ;　　//设置用户testuser，只拥有【查询\插入】操作权限 ；
 
-　　>> REVOKE select,insert ON what FROM testuser　　//取消用户testuser的【查询\插入】操作权限 ；
+　　>> REVOKE select,insert ON database.table FROM testuser　　//取消用户testuser的【查询\插入】操作权限 ；
+
+　　>> REVOKE all ON database.table FROM testuser　　//取消用户testuser的【查询\插入】操作权限 ；
 
 　　
 
