--- a/Language/Java/多态.md
+++ b/Language/Java/多态.md
@@ -5,6 +5,12 @@
     class Z extends F{}
     
     F f = new Z();
+    f.zi();
+    Z zi = (Z)f;
+    zi.zi();
     
 > 运行时,使用父类的成员，子类的方法
-> 
+> 注意向上，和向下转型
+
+### instanceof 
+> 有关系的比如继承
