--- a/Language/Java/多态.md
+++ b/Language/Java/多态.md
@@ -9,7 +9,7 @@
     Z zi = (Z)f;
     zi.zi();
     
-> 运行时,使用父类的成员，子类的方法（静态方法还是调父类的）
+> 运行时,使用父类的成员，子类的方法（静态还是调父类的）
 > 注意向上，和向下转型
 
 ### instanceof 
