--- a/SQL/Mysql/study/体系分析.md
+++ b/SQL/Mysql/study/体系分析.md
@@ -19,7 +19,7 @@
 
 ###SQL解析流程
 > sql进入数据库，（如不考虑权限）  
-> 第一步是进入QueryCache（数据库静态缓存，在大量修改情况下缓存无意义，所以在专门写数据库建议关掉）  
+> 第一步是进入QueryCache（数据库静态sql缓存，在大量动态sql语句情况下缓存无意义，所以在5.6以后建议关掉）  
 > 第二步通过解析器解析sql（变成数据库认识的树状结构） 
 > 第三步通过预处理器预处理（处理那些解析不完整的sql） 
 > 第四步通过优化器优化语句（如orderby、groupby、join） 
