--- a/SQL/Mysql/study/体系分析.md
+++ b/SQL/Mysql/study/体系分析.md
@@ -21,7 +21,7 @@
 > sql进入数据库，（如不考虑权限）  
 > 第一步是进入QueryCache（数据库静态sql缓存，在大量动态sql语句情况下缓存无意义，所以在5.6以后建议关掉）  
 > 第二步通过解析器解析sql（变成数据库认识的树状结构） 
-> 第三步通过预处理器预处理（处理那些解析不完整的sql） 
+> 第三步通过预处理器预处理（处理那些解析不完整的sql，检查权限） 
 > 第四步通过优化器优化语句（如orderby、groupby、join） 
 > 第五步生成最优的执行计划（我们通过执行计划来判断数据库是如何查询数据的，这里能看到相关统计信息） 
 > 第六步调用数据库api接口找到对应存储引擎  
