--- a/SQL/Mysql/study/体系分析.md
+++ b/SQL/Mysql/study/体系分析.md
@@ -1,13 +1,5 @@
 ### 结构组成
-> mysql由server层和存储引擎层两大层组成
-1. 连接池组件
-2. 管理服务和工具组件
-3. SQL接口组件
-4. 查询分析器组件
-5. 优化器组件
-6. 缓冲组件
-7. 插件式存储引擎（与其他数据库的主要区别）
-8. 物理文件
+> mysql由server层和存储引擎层两大层组成，5版本的server层没大变化，但是存储引擎有变化
 
 ### server层
 1. 连接池组件
@@ -16,6 +8,10 @@
 4. 查询分析器组件
 5. 优化器组件
 6. 缓冲组件
+
+### 存储引擎
+7. 插件式存储引擎（与其他数据库的主要区别）
+8. 物理文件
 
 ###SQL解析流程
 > sql进入数据库，（如不考虑权限）  
@@ -28,9 +24,27 @@
 > 第七步最后存储引擎获取数据  
 > 前六步在server层中进行，第七步在存储引擎中进行  
 
+### 存储引擎
+> mysql表存储引擎是基于表的，而不是库。核心就是这些存储引擎，这些存储引擎是插件式的
 
+### innodb
+> 支持事务、行锁、外键 
+> 支持多版本并发控制（sql语句是有版本编号的）MVCC来获取高并发，实现了标准的4种隔离级别（默认repeatable）  
+> 提供插入缓冲（insert buffer），二次写，自适应哈希，预读  
+> innodb把数据和索引都放在一个叫“.idb”文件中。它对数据和索引都进行内存缓存  
+> 表结构放在“.frm”文件中
 
+### myisam
+> 不支持事务，是表锁，全文索引  
+> myisam表数据和索引分开存放，数据在“myd”文件中，索引在“myi”中存放。它只内存缓存索引文件  
+> 表结构放在“.frm”文件中
 
+###innobd和myisam区别
+1. 事务支持
+2. 锁粒度
+3. 并发性
+4. 缓存机制
+5. select count(*) 5.7以前myisam有计数器，有绝对优势，5.7都差不多了
 
 
 
