--- a/Linux/cmd/权限管理.md
+++ b/Linux/cmd/权限管理.md
@@ -23,6 +23,8 @@ setfacl -m u:st:rx 文件/目录
 setfacl -x g:tgroup 文件/目录
 setfacl -m u:st:rx -R 文件/目录 *注意：这个-R必须放在-m后面*
 setfacl -m d:u:st:rx 目录 *d 代表目录内默认acl权限*
+setfacl -m d:u:www:rwx -R dir  递归修改www用户默认dir的权限 
+
 ```
     -m  设定acl权限 参数u：用户，g：组，m：mask，用户名/组名/mask，权限
     -x  删除指定的acl权限
